--- a/index.html
+++ b/index.html
@@ -19,37 +19,7 @@ layout: default
         </div>
         <a href="#one" class="goto-next scrolly">Next</a>
       </section>
-			<!-- One -->
-      <section id="one" class="spotlight style1 bottom">
-        <span class="image fit main"><img src="{{ page.deuxiem_image }}" alt="Illustration" /></span>
-        <div class="content">
-          <div class="container">
-            <div class="row">
-              <div class="col-4 col-12-medium">
-                <header>
-                  <h2 class="editable">Odio faucibus ipsum integer consequat</h2>
-                  <p class="editable">Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
-                </header>
-              </div>
-              <div class="col-4 col-12-medium">
-                <p class="editable">Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-                Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-                nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-                augue varius tempus lobortis porttitor accumsan consequat
-                adipiscing lorem dolor.</p>
-              </div>
-              <div class="col-4 col-12-medium">
-                <p class="editable">Morbi enim nascetur et placerat lorem sed iaculis neque ante
-                adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-                Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-                mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-                ipsum dolor nullam.</p>
-              </div>
-            </div>
-          </div>
-        </div>
 
-      </section>
 
 {% for sortie in site.sorties %}
 			<!-- Two -->
@@ -74,7 +44,7 @@ layout: default
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2 class="editable">Disponible partout, Tentend?</h2>
+							<h2 class="editable">Disponible <a href="https://pauvrecoude.bandcamp.com">partout,</a> Tentend?</h2>
 							<p class="editable">Payes ta musique Kaukaze. Respect aux pirates! Tu sais ou te fournir!</p>
 						</header>
 						<div class="box alt">
