--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2 class="editable">Disponible <a href="https://pauvrecoude.bandcamp.com">partout,</a> Tentend?</h2>
+							<h2 class="editable">Disponible <a href="https://pauvrecoude.bandcamp.com" style="color:red;">partout,</a> Tentend?</h2>
 							<p class="editable">Payes ta musique Kaukaze. Respect aux pirates! Tu sais ou te fournir!</p>
 						</header>
 						<div class="box alt">
