--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
             <h2>{{ page.title }}</h2>
             <p>{{ page.description }}</p>
           </header>
-          <span class="image"><img src="/images/pauvrecoude.jpg" alt="Le visage de Pauvre Coude" class="editable" /></span>
+          <a href="https://pauvrecoude.bandcamp.com" style="border: none;"><span class="image"><img src="/images/pauvrecoude.jpg" alt="Le visage de Pauvre Coude" class="editable" /></span></a>
         </div>
         <a href="#one" class="goto-next scrolly">Next</a>
       </section>
