--- a/contact-success.html
+++ b/contact-success.html
@@ -14,7 +14,7 @@ sitemap: false
             <h2>{{ page.title }}</h2>
             <p>{{ page.description }}</p>
           </header>
-          <span class="image"><img src="/images/pauvrecoude.jpg" alt="" class="editable" /></span>
+          <a href="https://pauvrecoude.bandcamp.com" style="border:none;"><span class="image"><img src="/images/pauvrecoude.jpg" alt="" class="editable" /></span></a>
         </div>
       </section>
 
